Proyecto 2/.antlr/AnalizadorLexicoParser.java
// Generated from c:/Users/Rodas/OneDrive/Documentos/USAC/11vo Semestre/OLC2/Lab/Proyecto 2/AnalizadorLexico.g4 by ANTLR 4.13.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class AnalizadorLexicoParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, LINEA=44, MULTILINEA=45, 
		NEWLINE=46, INT=47, DECIMAL=48, CADENA=49, CARACTER=50, BOOL=51, NIL=52, 
		ID=53, IGUAL=54, DPIGUAL=55, PARIZQ=56, PARDER=57, LLAVEIZQ=58, LLAVEDER=59, 
		CORIZQ=60, CORDER=61, COMA=62, INCRE=63, DECRE=64;
	public static final int
		RULE_inicio = 0, RULE_listaInstr = 1, RULE_instruccion = 2, RULE_print = 3, 
		RULE_declaracionVariable = 4, RULE_declaracionSlice = 5, RULE_asignacion = 6, 
		RULE_tipo = 7, RULE_instruccion_if = 8, RULE_instruccion_ifelse = 9, RULE_instruccion_else = 10, 
		RULE_instruccion_switch = 11, RULE_lista_case = 12, RULE_instruccion_case = 13, 
		RULE_instruccion_default = 14, RULE_instruccion_for = 15, RULE_instruccion_funcion = 16, 
		RULE_llamada_funcion = 17, RULE_lista_parametros = 18, RULE_lista_argumentos = 19, 
		RULE_breakInstr = 20, RULE_continueInstr = 21, RULE_returnInstr = 22, 
		RULE_expr = 23;
	private static String[] makeRuleNames() {
		return new String[] {
			"inicio", "listaInstr", "instruccion", "print", "declaracionVariable", 
			"declaracionSlice", "asignacion", "tipo", "instruccion_if", "instruccion_ifelse", 
			"instruccion_else", "instruccion_switch", "lista_case", "instruccion_case", 
			"instruccion_default", "instruccion_for", "instruccion_funcion", "llamada_funcion", 
			"lista_parametros", "lista_argumentos", "breakInstr", "continueInstr", 
			"returnInstr", "expr"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'fmt.Println'", "'var'", "'+='", "'-='", "'append'", "'int'", 
			"'float64'", "'string'", "'bool'", "'rune'", "'if'", "'else'", "'switch'", 
			"'case'", "':'", "'default'", "'for'", "';'", "'range'", "'func'", "'break'", 
			"'continue'", "'return'", "'!'", "'-'", "'*'", "'/'", "'%'", "'+'", "'>='", 
			"'>'", "'<='", "'<'", "'=='", "'!='", "'&&'", "'||'", "'slices.Index'", 
			"'strings.Join'", "'len'", "'strconv.Atoi'", "'strconv.ParseFloat'", 
			"'reflect.TypeOf'", null, null, null, null, null, null, null, null, "'nil'", 
			null, "'='", "':='", "'('", "')'", "'{'", "'}'", "'['", "']'", "','", 
			"'++'", "'--'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, "LINEA", "MULTILINEA", 
			"NEWLINE", "INT", "DECIMAL", "CADENA", "CARACTER", "BOOL", "NIL", "ID", 
			"IGUAL", "DPIGUAL", "PARIZQ", "PARDER", "LLAVEIZQ", "LLAVEDER", "CORIZQ", 
			"CORDER", "COMA", "INCRE", "DECRE"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "AnalizadorLexico.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public AnalizadorLexicoParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class InicioContext extends ParserRuleContext {
		public ListaInstrContext listaInstr() {
			return getRuleContext(ListaInstrContext.class,0);
		}
		public InicioContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_inicio; }
	}

	public final InicioContext inicio() throws RecognitionException {
		InicioContext _localctx = new InicioContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_inicio);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(48);
			listaInstr();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ListaInstrContext extends ParserRuleContext {
		public List<InstruccionContext> instruccion() {
			return getRuleContexts(InstruccionContext.class);
		}
		public InstruccionContext instruccion(int i) {
			return getRuleContext(InstruccionContext.class,i);
		}
		public ListaInstrContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_listaInstr; }
	}

	public final ListaInstrContext listaInstr() throws RecognitionException {
		ListaInstrContext _localctx = new ListaInstrContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_listaInstr);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(50);
			instruccion();
			setState(54);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 9007199270610950L) != 0)) {
				{
				{
				setState(51);
				instruccion();
				}
				}
				setState(56);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class InstruccionContext extends ParserRuleContext {
		public PrintContext print() {
			return getRuleContext(PrintContext.class,0);
		}
		public DeclaracionVariableContext declaracionVariable() {
			return getRuleContext(DeclaracionVariableContext.class,0);
		}
		public DeclaracionSliceContext declaracionSlice() {
			return getRuleContext(DeclaracionSliceContext.class,0);
		}
		public AsignacionContext asignacion() {
			return getRuleContext(AsignacionContext.class,0);
		}
		public Instruccion_ifContext instruccion_if() {
			return getRuleContext(Instruccion_ifContext.class,0);
		}
		public Instruccion_switchContext instruccion_switch() {
			return getRuleContext(Instruccion_switchContext.class,0);
		}
		public Instruccion_forContext instruccion_for() {
			return getRuleContext(Instruccion_forContext.class,0);
		}
		public Instruccion_funcionContext instruccion_funcion() {
			return getRuleContext(Instruccion_funcionContext.class,0);
		}
		public Llamada_funcionContext llamada_funcion() {
			return getRuleContext(Llamada_funcionContext.class,0);
		}
		public BreakInstrContext breakInstr() {
			return getRuleContext(BreakInstrContext.class,0);
		}
		public ContinueInstrContext continueInstr() {
			return getRuleContext(ContinueInstrContext.class,0);
		}
		public ReturnInstrContext returnInstr() {
			return getRuleContext(ReturnInstrContext.class,0);
		}
		public InstruccionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_instruccion; }
	}

	public final InstruccionContext instruccion() throws RecognitionException {
		InstruccionContext _localctx = new InstruccionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_instruccion);
		try {
			setState(69);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(57);
				print();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(58);
				declaracionVariable();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(59);
				declaracionSlice();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(60);
				asignacion();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(61);
				instruccion_if();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(62);
				instruccion_switch();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(63);
				instruccion_for();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(64);
				instruccion_funcion();
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(65);
				llamada_funcion();
				}
				break;
			case 10:
				enterOuterAlt(_localctx, 10);
				{
				setState(66);
				breakInstr();
				}
				break;
			case 11:
				enterOuterAlt(_localctx, 11);
				{
				setState(67);
				continueInstr();
				}
				break;
			case 12:
				enterOuterAlt(_localctx, 12);
				{
				setState(68);
				returnInstr();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PrintContext extends ParserRuleContext {
		public TerminalNode PARIZQ() { return getToken(AnalizadorLexicoParser.PARIZQ, 0); }
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public TerminalNode PARDER() { return getToken(AnalizadorLexicoParser.PARDER, 0); }
		public List<TerminalNode> COMA() { return getTokens(AnalizadorLexicoParser.COMA); }
		public TerminalNode COMA(int i) {
			return getToken(AnalizadorLexicoParser.COMA, i);
		}
		public PrintContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_print; }
	}

	public final PrintContext print() throws RecognitionException {
		PrintContext _localctx = new PrintContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_print);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(71);
			match(T__0);
			setState(72);
			match(PARIZQ);
			setState(73);
			expr(0);
			setState(78);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMA) {
				{
				{
				setState(74);
				match(COMA);
				setState(75);
				expr(0);
				}
				}
				setState(80);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(81);
			match(PARDER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DeclaracionVariableContext extends ParserRuleContext {
		public DeclaracionVariableContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaracionVariable; }
	 
		public DeclaracionVariableContext() { }
		public void copyFrom(DeclaracionVariableContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class DeclaracionVarContext extends DeclaracionVariableContext {
		public TerminalNode ID() { return getToken(AnalizadorLexicoParser.ID, 0); }
		public TipoContext tipo() {
			return getRuleContext(TipoContext.class,0);
		}
		public TerminalNode IGUAL() { return getToken(AnalizadorLexicoParser.IGUAL, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public DeclaracionVarContext(DeclaracionVariableContext ctx) { copyFrom(ctx); }
	}

	public final DeclaracionVariableContext declaracionVariable() throws RecognitionException {
		DeclaracionVariableContext _localctx = new DeclaracionVariableContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_declaracionVariable);
		int _la;
		try {
			_localctx = new DeclaracionVarContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(83);
			match(T__1);
			setState(84);
			match(ID);
			setState(85);
			tipo();
			setState(88);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==IGUAL) {
				{
				setState(86);
				match(IGUAL);
				setState(87);
				expr(0);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DeclaracionSliceContext extends ParserRuleContext {
		public DeclaracionSliceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaracionSlice; }
	 
		public DeclaracionSliceContext() { }
		public void copyFrom(DeclaracionSliceContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class DeclaracionSliceVacioContext extends DeclaracionSliceContext {
		public TerminalNode ID() { return getToken(AnalizadorLexicoParser.ID, 0); }
		public TerminalNode CORIZQ() { return getToken(AnalizadorLexicoParser.CORIZQ, 0); }
		public TerminalNode CORDER() { return getToken(AnalizadorLexicoParser.CORDER, 0); }
		public TipoContext tipo() {
			return getRuleContext(TipoContext.class,0);
		}
		public DeclaracionSliceVacioContext(DeclaracionSliceContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class DeclaracionSliceLlenoContext extends DeclaracionSliceContext {
		public Token signo;
		public TerminalNode ID() { return getToken(AnalizadorLexicoParser.ID, 0); }
		public TerminalNode CORIZQ() { return getToken(AnalizadorLexicoParser.CORIZQ, 0); }
		public TerminalNode CORDER() { return getToken(AnalizadorLexicoParser.CORDER, 0); }
		public TipoContext tipo() {
			return getRuleContext(TipoContext.class,0);
		}
		public TerminalNode LLAVEIZQ() { return getToken(AnalizadorLexicoParser.LLAVEIZQ, 0); }
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public TerminalNode LLAVEDER() { return getToken(AnalizadorLexicoParser.LLAVEDER, 0); }
		public TerminalNode IGUAL() { return getToken(AnalizadorLexicoParser.IGUAL, 0); }
		public TerminalNode DPIGUAL() { return getToken(AnalizadorLexicoParser.DPIGUAL, 0); }
		public List<TerminalNode> COMA() { return getTokens(AnalizadorLexicoParser.COMA); }
		public TerminalNode COMA(int i) {
			return getToken(AnalizadorLexicoParser.COMA, i);
		}
		public DeclaracionSliceLlenoContext(DeclaracionSliceContext ctx) { copyFrom(ctx); }
	}

	public final DeclaracionSliceContext declaracionSlice() throws RecognitionException {
		DeclaracionSliceContext _localctx = new DeclaracionSliceContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_declaracionSlice);
		int _la;
		try {
			setState(111);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__1:
				_localctx = new DeclaracionSliceVacioContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(90);
				match(T__1);
				setState(91);
				match(ID);
				setState(92);
				match(CORIZQ);
				setState(93);
				match(CORDER);
				setState(94);
				tipo();
				}
				break;
			case ID:
				_localctx = new DeclaracionSliceLlenoContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(95);
				match(ID);
				setState(96);
				((DeclaracionSliceLlenoContext)_localctx).signo = _input.LT(1);
				_la = _input.LA(1);
				if ( !(_la==IGUAL || _la==DPIGUAL) ) {
					((DeclaracionSliceLlenoContext)_localctx).signo = (Token)_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				setState(97);
				match(CORIZQ);
				setState(98);
				match(CORDER);
				setState(99);
				tipo();
				setState(100);
				match(LLAVEIZQ);
				setState(101);
				expr(0);
				setState(106);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMA) {
					{
					{
					setState(102);
					match(COMA);
					setState(103);
					expr(0);
					}
					}
					setState(108);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(109);
				match(LLAVEDER);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AsignacionContext extends ParserRuleContext {
		public AsignacionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_asignacion; }
	 
		public AsignacionContext() { }
		public void copyFrom(AsignacionContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class SliceUpdateContext extends AsignacionContext {
		public TerminalNode ID() { return getToken(AnalizadorLexicoParser.ID, 0); }
		public TerminalNode CORIZQ() { return getToken(AnalizadorLexicoParser.CORIZQ, 0); }
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public TerminalNode CORDER() { return getToken(AnalizadorLexicoParser.CORDER, 0); }
		public TerminalNode IGUAL() { return getToken(AnalizadorLexicoParser.IGUAL, 0); }
		public SliceUpdateContext(AsignacionContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class AsignacionVarContext extends AsignacionContext {
		public Token signo;
		public TerminalNode ID() { return getToken(AnalizadorLexicoParser.ID, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode IGUAL() { return getToken(AnalizadorLexicoParser.IGUAL, 0); }
		public TerminalNode DPIGUAL() { return getToken(AnalizadorLexicoParser.DPIGUAL, 0); }
		public AsignacionVarContext(AsignacionContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class IncrementoDecrementoContext extends AsignacionContext {
		public TerminalNode ID() { return getToken(AnalizadorLexicoParser.ID, 0); }
		public TerminalNode INCRE() { return getToken(AnalizadorLexicoParser.INCRE, 0); }
		public TerminalNode DECRE() { return getToken(AnalizadorLexicoParser.DECRE, 0); }
		public IncrementoDecrementoContext(AsignacionContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class AsignacionIncrementoContext extends AsignacionContext {
		public Token operador;
		public TerminalNode ID() { return getToken(AnalizadorLexicoParser.ID, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public AsignacionIncrementoContext(AsignacionContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class AsignacionSliceContext extends AsignacionContext {
		public List<TerminalNode> ID() { return getTokens(AnalizadorLexicoParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(AnalizadorLexicoParser.ID, i);
		}
		public TerminalNode IGUAL() { return getToken(AnalizadorLexicoParser.IGUAL, 0); }
		public AsignacionSliceContext(AsignacionContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class AppendContext extends AsignacionContext {
		public List<TerminalNode> ID() { return getTokens(AnalizadorLexicoParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(AnalizadorLexicoParser.ID, i);
		}
		public TerminalNode IGUAL() { return getToken(AnalizadorLexicoParser.IGUAL, 0); }
		public TerminalNode PARIZQ() { return getToken(AnalizadorLexicoParser.PARIZQ, 0); }
		public List<TerminalNode> COMA() { return getTokens(AnalizadorLexicoParser.COMA); }
		public TerminalNode COMA(int i) {
			return getToken(AnalizadorLexicoParser.COMA, i);
		}
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public TerminalNode PARDER() { return getToken(AnalizadorLexicoParser.PARDER, 0); }
		public AppendContext(AsignacionContext ctx) { copyFrom(ctx); }
	}

	public final AsignacionContext asignacion() throws RecognitionException {
		AsignacionContext _localctx = new AsignacionContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_asignacion);
		int _la;
		try {
			setState(149);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				_localctx = new AsignacionVarContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(113);
				match(ID);
				setState(114);
				((AsignacionVarContext)_localctx).signo = _input.LT(1);
				_la = _input.LA(1);
				if ( !(_la==IGUAL || _la==DPIGUAL) ) {
					((AsignacionVarContext)_localctx).signo = (Token)_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				setState(115);
				expr(0);
				}
				break;
			case 2:
				_localctx = new AsignacionIncrementoContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(116);
				match(ID);
				setState(117);
				((AsignacionIncrementoContext)_localctx).operador = _input.LT(1);
				_la = _input.LA(1);
				if ( !(_la==T__2 || _la==T__3) ) {
					((AsignacionIncrementoContext)_localctx).operador = (Token)_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				setState(118);
				expr(0);
				}
				break;
			case 3:
				_localctx = new AsignacionSliceContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(119);
				match(ID);
				setState(120);
				match(IGUAL);
				setState(121);
				match(ID);
				}
				break;
			case 4:
				_localctx = new AppendContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(122);
				match(ID);
				setState(123);
				match(IGUAL);
				setState(124);
				match(T__4);
				setState(125);
				match(PARIZQ);
				setState(126);
				match(ID);
				setState(127);
				match(COMA);
				setState(128);
				expr(0);
				setState(133);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMA) {
					{
					{
					setState(129);
					match(COMA);
					setState(130);
					expr(0);
					}
					}
					setState(135);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(136);
				match(PARDER);
				}
				break;
			case 5:
				_localctx = new SliceUpdateContext(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				setState(138);
				match(ID);
				setState(139);
				match(CORIZQ);
				setState(140);
				expr(0);
				setState(141);
				match(CORDER);
				setState(142);
				match(IGUAL);
				setState(143);
				expr(0);
				}
				break;
			case 6:
				_localctx = new IncrementoDecrementoContext(_localctx);
				enterOuterAlt(_localctx, 6);
				{
				setState(145);
				match(ID);
				setState(146);
				match(INCRE);
				}
				break;
			case 7:
				_localctx = new IncrementoDecrementoContext(_localctx);
				enterOuterAlt(_localctx, 7);
				{
				setState(147);
				match(ID);
				setState(148);
				match(DECRE);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TipoContext extends ParserRuleContext {
		public TipoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tipo; }
	}

	public final TipoContext tipo() throws RecognitionException {
		TipoContext _localctx = new TipoContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_tipo);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(151);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 1984L) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
